Closed
Bug 127585
Opened 24 years ago
Closed 22 years ago
xpidl usage is incorrect
Categories
(Core :: XPCOM, defect, P5)
Core
XPCOM
Tracking
()
VERIFIED
FIXED
mozilla1.5alpha
People
(Reporter: timeless, Assigned: dbradley)
Details
Attachments
(1 file)
|
664 bytes,
patch
|
timeless
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
F:\build\mozilla\xpcom\typelib\xpidl\WIN32_D.OBJ>xpidl.exe -w -v
ERROR: must specify output mode
Usage: xpidl.exe [-m mode] [-w] [-v]
[-I path] [-o basename | -e filename.ext] filename.idl
if output mode is not optional, then it shouldn't be in []s
| Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P5
Target Milestone: --- → mozilla1.2
| Assignee | ||
Comment 1•23 years ago
|
||
Moving out to 1.3. If this needs to be in before 1.3 please comment.
Target Milestone: mozilla1.2alpha → mozilla1.3alpha
| Assignee | ||
Comment 2•23 years ago
|
||
| Assignee | ||
Comment 3•23 years ago
|
||
Moving to 1.4 Alpha
Target Milestone: mozilla1.3alpha → mozilla1.4alpha
| Assignee | ||
Comment 5•22 years ago
|
||
Comment on attachment 111042 [details] [diff] [review]
Cleans up help text
A one liner string fix for xpidl command line help.
Attachment #111042 -
Flags: superreview?(jst)
Attachment #111042 -
Flags: review?(timeless)
Comment 6•22 years ago
|
||
Comment on attachment 111042 [details] [diff] [review]
Cleans up help text
sr=jst
Attachment #111042 -
Flags: superreview?(jst) → superreview+
Attachment #111042 -
Flags: review?(timeless) → review+
| Assignee | ||
Comment 7•22 years ago
|
||
Fix checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•