bug 127585 - xpidl usage is incorrect. r=timeless, sr=jst